# opencv_roi

./: CMakeLists.txt  main.cpp
